Fix subsequent div fragment alignment

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -305,6 +305,7 @@ img.speaker-img-responsive {
     .speaker {
       display: block;
       margin: 0 auto;
+      min-height: 500px;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
     }
